infra/k8s/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: application
  name: replacer
spec:
  selector:
    app: replacer
    tier: web
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
