infra/k8s/application/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: application
  name: replacer
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: replacer
          servicePort: 80
